add  addmenu  function  to menu   service

--- a/Frontend/Cantine/src/app/admin/menus/new-menu/new-menu.component.html
+++ b/Frontend/Cantine/src/app/admin/menus/new-menu/new-menu.component.html
@@ -129,7 +129,7 @@
 
                         <div class="center">
                              <button   class="btn" (click)="onOpenListMealDialog()">Ajouter  La List Des plats</button>
-                             <p *ngIf="closedDialog && mealsContainMenu.length < 2 " style="color: crimson"> Vous Devez choisir impérativement  au moins 2 plats pour former un menu  </p>
+                             <p *ngIf="(closedDialog && mealsContainMenu.length < 2) || ( submitted && mealsContainMenu.length < 2) " style="color: crimson"> Vous Devez choisir impérativement  au moins 2 plats pour former un menu  </p>
 
                                                  <h3 *ngIf="mealsContainMenu.length >= 2"> Les plat choisis </h3>
                                 <div *ngFor="let meal of  mealsContainMenu">
@@ -162,7 +162,7 @@
 
                         <div class="btns">
                             <div class="btn-save center">
-                                <button  class="btn"> Enregistrer</button>
+                                <button  class="btn" (click)="onSubmit()"> Enregistrer</button>
                             </div>
                             <span><mat-icon>arrow_back</mat-icon></span>
                         </div>
