--- a/Frontend/Cantine/src/app/admin/menus/update-menu/update-menu.component.html
+++ b/Frontend/Cantine/src/app/admin/menus/update-menu/update-menu.component.html
@@ -108,25 +108,6 @@
                         </div>
 
 
-                        <div class="form-group">
-                            <label for="category"> Catégorie </label>
-                            <select formControlName="category" class="form-control" id="category"
-                                    [ngClass]="{ 'is-invalid': submitted && f['category'].errors }" name="category">
-                                <option value="" disabled>-- Catégorie Du Plat --</option>
-                                <option value="Hamburgers">Hamburgers</option>
-                                <option value="Nuggets de poulet">Nuggets de poulet</option>
-                                <option value="Volailles cuites">Volailles cuites</option>
-                                <option value="Viandes">Viandes</option>
-                                <option value="Plats à la volaille">Plats à la volaille</option>
-                                <option value="Poulets">Poulets</option>
-                            </select>
-                            <div *ngIf="submitted && f['category'].errors" class="invalid-feedback">
-                                <div *ngIf="f['category'].errors['required']" class="center"> une catégorie est
-                                    requise
-                                </div>
-                            </div>
-                        </div>
-
 
                         <!---------------------- status --------------------------->
                         <div class="form-group">
@@ -147,7 +128,7 @@
 
                         <div class="center" style="padding-top: 10px;">
                             <p> Image du  Plat </p>
-                            <img  src="" alt="y'a pas de image ou  il  na pas pu  etre charger" width="300px" >
+                            <img  src="{{menu.image}}" alt="y'a pas de image ou  il  na pas pu  etre charger" width="300px" >
                         </div>
 
 
