add  update Menu  function

--- a/Frontend/Cantine/src/app/admin/menus/update-menu/update-menu.component.html
+++ b/Frontend/Cantine/src/app/admin/menus/update-menu/update-menu.component.html
@@ -154,10 +154,21 @@
                         </div>
 
 
+                        <div class="center">
+                            <button   class="btn" (click)="onOpenListMealDialog()">Ajouter  La List Des plats</button>
+                            <p *ngIf="(closedDialog && mealsContainMenu.length < 2) || ( submitted && mealsContainMenu.length < 2) " style="color: crimson"> Vous Devez choisir impérativement  au moins 2 plats pour former un menu  </p>
+
+                            <h3 *ngIf="mealsContainMenu.length >= 2"> Les plat choisis </h3>
+                            <div *ngFor="let meal of  mealsContainMenu">
+                                <p> Label : {{meal.label}}  , Catégoey :  {{meal.category}} , prix : {{meal.price}}  </p>
+                            </div>
+
+                        </div>
+
                         <div class="btns">
                             <!---->
                             <div class="btn-save center">
-                                <button  class="btn"> Valider </button>
+                                <button  class="btn"  (click)=" onSubmit()"> Valider </button>
                             </div>
                             <!--(click)="goback()"-->
                             <span ><mat-icon>arrow_back</mat-icon></span>
