--- a/Frontend/Cantine/src/app/admin/menus/new-menu/new-menu.component.html
+++ b/Frontend/Cantine/src/app/admin/menus/new-menu/new-menu.component.html
@@ -26,7 +26,7 @@
                                     le nom du plat ne doit pas dépasser 60 charctéres
                                 </div>
                                 <div *ngIf="f['label'].errors['minlength']" class="center">
-                                    le nom du plat ne doit avoir au minimum de 3 charctéres
+                                    le nom du plat  doit avoir au minimum de 3 charctéres
                                 </div>
                             </div>
                         </div>
